--- a/html/Maintenance/Chip Detector.html
+++ b/html/Maintenance/Chip Detector.html
@@ -1,6 +1,1 @@
-<p>Besides cleaning the filter, pull the chip detector on the bottom of the gear reduction case and keep it cleaned off every 200 hours. The discovery of ANY magnetic particles should be investigated by qualified personnel. Refer to the figure below, Item 2. </p>
-
-<figure>
-    <img class="imageCentered_3x4" src="img/img_Fig_49.png">
-    <figcaption class="centerText">Chip Detector</figcaption>
-</figure>
+<p>Besides cleaning the filter, pull the chip detector on the bottom of the gear reduction case and keep it cleaned off every 200 hours. The discovery of ANY magnetic particles should be investigated by qualified personnel. Refer to the FIGURE 49 below, Item 2. </p>
