--- a/html/Maintenance/Compressor Washes.html
+++ b/html/Maintenance/Compressor Washes.html
@@ -13,7 +13,7 @@
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
-    <p class="boxCautionLargeText">Do <u>NOT</u> mix compressor washing materials in stronger strenghts than shown in the P&WC manual. The ratios are the MAXIMUM allowed. An operator may do more damage than good if trying to wash a compressor with a higher concentration of cleaning agen than that recommended by P&WC.</p>
+    <p class="boxCautionLargeText">Do <u>NOT</u> mix compressor washing materials in stronger strength than shown in the P&WC manual. The ratios are the MAXIMUM allowed. An operator may do more damage than good if trying to wash a compressor with a higher concentration of cleaning agent than that recommended by P&WC.</p>
 </div>
 
 <p>Prior to performing a compressor wash, the engine MUST be allowed to cool for a minimum of three hours to avoid stressing HSI components. </p>
