Added figure and xref, added with xref to other section

--- a/html/Maintenance/Fuel Nozzle Cleaning.html
+++ b/html/Maintenance/Fuel Nozzle Cleaning.html
@@ -2,8 +2,13 @@
 
 <p>The earlier model of PT6A engines came with 7 primary and 7 secondary nozzles. The engine starts on the primary nozzles and at about 35% Ng the secondary nozzles come in. The engineers at Pratt & Whitney have discovered that the engine will start cooler by reducing the number of secondary nozzles, hence Service Bulletin 1372. All the new engines from Pratt & Whitney come in the 10 primary / 4 secondary configuration. Most of the older engines have been converted, but if you have one that has not, converting it over will cool down your starting IT temperatures considerably. </p>
 
-<p>To remove or install fuel nozzles, refer to the proper Pratt & Whitney manual in Section 1, INSTRUCTIONS FOR CONTINUED AIRWORHTINESS. Write down the location of the primary and secondary nozzles. The primary nozzle may be identified by a weld spot on the flat area next to one of the bolts. See Figure 48. DO NOT MARK ON THE GAS GENERATOR CASE WITH A PENCIL. </p>
+<p>To remove or install fuel nozzles, refer to the proper Pratt & Whitney manual in <xref sectionTarget="1.0.2" prependLabel="Section"></xref>. Write down the location of the primary and secondary nozzles. The primary nozzle may be identified by a weld spot on the flat area next to one of the bolts. See <xref fileTarget="img_Fig_48.png" xrefType="link">Fig Cross Reference</xref> below. </p>
 
+<p>DO NOT MARK ON THE GAS GENERATOR CASE WITH A PENCIL. </p>
+<figure>
+    <img class="imageCentered_5x2" src="img/img_Fig_48.png">
+    <figcaption class="centerText">Fuel Nozzles</figcaption>
+</figure>
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">IMPORTANT</p>
     <p class="boxCautionLargeText">The quality of fuel and the condition of the fuel and fuel nozzle will have a direct relation to the condition and the longevity of your engine.</p>
