Small typo corrections and xref for fig

--- a/html/Maintenance/Engine Build Up.html
+++ b/html/Maintenance/Engine Build Up.html
@@ -1,4 +1,4 @@
-<p>The engine build-up consists of parts and accessories that are remove from the engine being removed and installing them
+<p>The engine build-up consists of parts and accessories that are removed from the original engine and installing them
     on the replacement engine. It is recommended to replace all gaskets, packings, and/or O-rings during reassembly. For
     accessory drive gaskets, refer to the appropriate Pratt & Whitney Engine Illustrated Parts Catalog.</p>
 
@@ -29,12 +29,12 @@
     <li>Exhaust stacks</li>
     <li>Air Conditioner Compressor and Drive Pad Assy</li>
     <li>FCU power lever input arm and Beta light micro switch</li>
-    <li>Fuel FLow Transducer</li>
+    <li>Fuel Flow Transducer</li>
     <li>Fittings at accessory drains, oil to fuel heater, combustion drain, torque pressure line, propeller shaft seal
         drain</li>
 </ul>
 
-<p class="dontBreakAfter">Accessories are located on the engine's drive pads.</p>
+<p class="dontBreakAfter">Accessories are located on the engine's drive pads as seen below in <xref fileTarget="img_EngineDrivePads.png" xrefType="link">Fig Cross Reference</xref>.</p>
 <figure>
     <img class="imageCentered_5x3" src="img/img_EngineDrivePads.png">
     <figcaption class="centerText">Drive Pads</figcaption>
@@ -52,7 +52,7 @@
 <p>Build up (prepare for installation) the engine and accessories with the following procedure.</p>
 
 <ol type="1">
-    <li>Install engine mounts/Vibration isolators on engine mount pads. Install grounding strap isolator mounting bolt.
+    <li>Install engine mounts/vibration isolators on engine mount pads. Install grounding strap isolator mounting bolt.
         Torque mounting hardware supplied with isolator to 185 - 225 in-lbs. and safety wire. </li>
     <li>Install Np tach generator on engine RGB drive (Pad 8) with gasket. Lubricate generator coupling and spline shift
         with turbine engine oil. Torque nuts to 50 in-lbs. </li>
