--- a/html/Maintenance/Engine Removal.html
+++ b/html/Maintenance/Engine Removal.html
@@ -3,8 +3,8 @@
     <p class="boxCautionLargeText">If an engine is being removed due to an unscheduled inspection, refer to the
         applicable Pratt & Whitney Engine Maintenance Manual. If the engine is being removed due to suspected or actual
         oil conamination, the airframe oil cooler and all asociated oil lines must be drained and flushed to prevent
-        cross contamination of newly installed engine. The following components must be either repalced or sent to an
-        appropriately rated faciclity for disassembly, inspection, flushing, and return to service:
+        cross contamination of newly installed engine. The following components must be either replaced or sent to an
+        appropriately rated facility for disassembly, inspection, flushing, and return to service:
     <ol style="width: 80%; margin: auto; text-align: left;" type="1">
         <li>Propeller Governor (Primarily Governor)</li>
         <li>Overspeed Governor</li>
@@ -24,7 +24,7 @@
     <p class="boxCautionLargeHeader">CAUTION</p>
     <p class="boxCautionLargeText">If the engine being removed is expected to be inactive longer than seven (7) days,
         refer to the appropriate Pratt & Whitney Engine Maintenance Manual for preservation instructions. Ensure that
-        the appropriate logbook entries asre made to document level of preservation and affix a tag or other identifying
+        the appropriate logbook entries are made to document level of preservation and affix a tag or other identifying
         document to the engine stating that the engine has been preserved.</p>
 </div>
 
@@ -37,7 +37,7 @@
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">NOTE</p>
-    <p class="boxCautionLargeText">Ensure suitable containers are presesnt to capture drainted fuel and oil during
+    <p class="boxCautionLargeText">Ensure suitable containers are present to capture drained fuel and oil during
         engine removal.</p>
 </div>
 
@@ -45,7 +45,7 @@
     <li>Ensure batter switch (BATT) is OFF.</li>
     <li>Turn fuel valve selector lever to OFF.</li>
     <li>Remove engine side cowlings, top cowling, and bottom cowling.</li>
-    <li>Disconnect batteries. (Accessible after remoal of bottom cowling.)</li>
+    <li>Disconnect batteries. (Accessible after removal of bottom cowling.)</li>
     <li>Remove exhaust stacks. Cover engine exhaust ducts to prevent FOD from entering engine.</li>
     <li>Disconnect the engine beta linkage and carbon block assembly from the beta ring.
         <figure>
@@ -53,8 +53,8 @@
             <figcaption class="centerText">Beta Linkage and Ring</figcaption>
         </figure>
     </li>
-    <li>Remove propeller. (Refer to Propeller Removal/Replacement section of this manual.)</li>
-    <li>Disconnect nose landing light connectors and associated claping hardware.</li>
+    <li>Remove propeller. (Refer to <xref sectionTarget="2.95.1" prependLabel="Section"></xref> of this manual.)</li>
+    <li>Disconnect nose landing light connectors and associated clamping hardware.</li>
     <li>Remove nose bowl.
         <figure>
             <img class="imageCentered_3x4" src="img/img_NoseBowlRemoval.png">
@@ -77,14 +77,14 @@
             <li>Remove air inlet tunnel.
                 <figure>
                     <img class="imageCentered_4x3" src="img/img_EngineAirInletTunnel.png">
-                    <figcaption>Air Inlet Tunnel</figcaption>
+                    <figcaption class="centerText">Air Inlet Tunnel</figcaption>
                 </figure>
             </li>
             <li>Remove air filter.</li>
             <li>Disconnect engine intake alternate air door control cable at clevis.
                 <figure>
                     <img class="imageCentered_3x4" src="img/img_EngineAlternateAirDoor.png">
-                    <figcaption>Alternate Air Door</figcaption>
+                    <figcaption class="centerText">Alternate Air Door</figcaption>
                 </figure>
             </li>
         </ul>
@@ -218,7 +218,7 @@
     <li>Disconnect engine ignition exciter igniter leads.
         <figure>
             <img class="imageCentered_3x5" src="img/img_EngineExciterAndIgniterLeads.png">
-            <figcaption class="centerText">Exciter and Ignitor Leads</figcaption>
+            <figcaption class="centerText">Exciter and Igniter Leads</figcaption>
         </figure>
     </li>
     <li>Remove engine intake plenum bulkheads.
