typos, xref for figs inserted

--- a/html/Maintenance/Flaps.html
+++ b/html/Maintenance/Flaps.html
@@ -4,7 +4,7 @@
 
 <p>During 12-month inspections, the AN4-12A bolt through the push-rod should be checked for straightness, and if bent, both the bolt and bearing should be replaced immediately. At 100 hour intervals, remove the lower fuselage side skins under the cockpit and while the flaps are being cycled through the full range of travel, check to see if the push-rods drag on any fuselage parts. With the flaps full down, and then full up, move the ailerons through the full range of travel and check clearance.</p>
 
-<p>Details showing flap removal and installation are shown below. The procedures for these operations are shown below.</p>
+<p>Details showing flap removal and installation are shown below in <xref fileTarget="img_Fig_25.png" xrefType="link">Fig Cross Reference</xref>.</p>
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_25.png">
     <figcaption class="centerText">Flaps</figcaption>
