--- a/html/Maintenance/MVP50T Engine Instrument Calibration.html
+++ b/html/Maintenance/MVP50T Engine Instrument Calibration.html
@@ -1,5 +1,5 @@
 
-<p>Calibration of the MVP-50T system is done with a generally similar process as compared to analog instruments.  The process is somewhat more complicated because it is not possible to remove individual instruments and then send them to a calibration shop.  All testing must therefore be performed with the instruments and devices in situ.</p>
+<p>Calibration of the MVP-50T system is done with a generally similar process as compared to analog instruments.  The process is somewhat more complicated because it is not possible to remove individual instruments and then send them to a calibration shop.  All testing must therefore be performed with the instruments and devices in SITU.</p>
 
 
 <p><b>Pressure Sensors</b></p>
