--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -1,4 +1,4 @@
-<p>The details for flap actuator installation are shown below (71112-1 Actuator). </p>
+<p>The details for flap actuator installation are shown below. </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_27.png">
@@ -23,11 +23,11 @@
     <ol type="1">
         <li>Re-install actuator in aircraft in reverse order as removal. </li>
 
-        <li>Raise flaps to full up position with flap switch in cockpit. Check position of flaps relative to wing (See Flap and Aileron Rigging Section of this manual).</li>
+        <li>Raise flaps to full up position with flap switch in cockpit. Check position of flaps relative to wing (See <xref sectionTarget="2.30.3" prependLabel="Section"></xref>).</li>
 
         <li>With flaps properly positioned with respect to the lower side of the wing, there should be a gap 1/16" to 1/8" between the ball nut and the actuator grease case. If the gap is not within the proper range, use the flap switch in the cockpit to provide the proper gap. It will then be necessary to set the flap position with respect to the lower wing surface by adjusting the flap pushrods. </li>
 
-        <li>Then loosen the two screws holding the UP micro-switch and adjust the micro-switch until a click is heard. Tighten the two screws and once more use the flap switch to lower and then raise the flaps to the full UP position. Again check the gap between the ball nut and end of the UP travel for 1/16" to 1/8" travel. Check the position of the flaps with respect to the lower wing surface. If all is in order, proceed to set the DOWN micro-switches. </li>
+        <li>Loosen the two screws holding the UP micro-switch and adjust the micro-switch until a click is heard. Tighten the two screws and once more use the flap switch to lower and then raise the flaps to the full UP position. Again check the gap between the ball nut and end of the UP travel for 1/16" to 1/8" travel. Check the position of the flaps with respect to the lower wing surface. If all is in order, proceed to set the DOWN micro-switches. </li>
 
         <li>Extend the flaps to 30° and adjust the micro-switch until a click is heard. Re-cycle the flaps and check DOWN travel again. </li>
         
