added fig xref and section xref

--- a/html/Maintenance/Fuel System Screens and Filters.html
+++ b/html/Maintenance/Fuel System Screens and Filters.html
@@ -12,7 +12,7 @@
 
 <p>After inspection and cleaning, the strainer and its fittings may be replaced by reversing the steps shown above. The threads of the elbow fitting should be cleaned and re-coated with RectorSeal 5 or equivalent fuel-resistant pipe-thread sealer. </p>
 
-<p>The firewall fuel filter is shown below. This fuel filter may be a Fram FS1133-PLM fuel filter or an Air Tractor p/n 53114-2 fuel filter. Both fuel filters use the Air Tractor p/n 52351-1 fuel filter element.  Inspection and maintenance procedures for both fuel filters are almost identical.  The filter should be cleaned and inspected for general condition in accordance with Service Letter #229 (Fram FS1133-PLM fuel filter) or Service Letter #229A (Air Tractor p/n 53114-1 fuel filter).  A copy of these Service Letters are found in the Appendix section of your OWNERS MANUAL. </p>
+<p>The firewall fuel filter is shown below. This fuel filter may be a Fram FS1133-PLM fuel filter or an Air Tractor p/n 53114-2 fuel filter. Both fuel filters use the Air Tractor p/n 52351-1 fuel filter element.  Inspection and maintenance procedures for both fuel filters are almost identical.  The filter should be cleaned and inspected for general condition in accordance with Service Letter #229 (Fram FS1133-PLM fuel filter) or Service Letter #229A (Air Tractor p/n 53114-1 fuel filter). </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_46.png">
