--- a/html/Maintenance/Fuel Tank Senders.html
+++ b/html/Maintenance/Fuel Tank Senders.html
@@ -13,4 +13,4 @@
 
 <p>When the sender is being replaced, the cork at the end of the float arm should just touch the bottom of the tank when the arm is at the lower end of its stroke. It should almost touch the top of the tank at the upper end of the stroke. If it will not quite touch the tank bottom or touches too soon, bend the arm gently by hand to achieve the desired position. </p>
 
-<p>Before re-installing the inspection plate on the fuel tank top, move the float arm through the full stroke with the battery switch “On" to see that the sender is working properly. Seal the inspection plate per instruction in “Fuel Tank" and re-install. </p>
+<p>Before re-installing the inspection plate on the fuel tank top, move the float arm through the full stroke with the battery switch “On" to see that the sender is working properly. Seal the inspection plate per instruction in <xref sectionTarget="2.75.2" prependLabel="Section"></xref> and re-install. </p>
