--- a/html/Maintenance/Fuselage Fixed Skins.html
+++ b/html/Maintenance/Fuselage Fixed Skins.html
@@ -1,4 +1,4 @@
-<p>Details of the upper and lower fuselage fixed skins are shown below. </p>
+<p>Details of the upper and lower fuselage fixed skins are shown below in <xref fileTarget="img_Fig_54.png" xrefType="link">Fig Cross Reference</xref> and <xref fileTarget="img_Fig_58.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_54.png">
@@ -13,8 +13,6 @@
 <p>The fixed skins are attached with 8-32 machine screws and nuts. Nuts in the lower skins are stainless MS21044-C08 and in the upper fuselage areas are AN365-832. The 100° countersunk machine screws are p/n 90012-5 for the 8-32 x 1/2 size, 90012-7 for the 8-32x5/8 size. The Truss head machine screws are p/n 90013-3 for the 8-32x3/8 long, -5 for 1/2 long,-7 for 5/8 long, and -8 for the ¾ long. </p>
 
 <p>The long lower skin is attached to the skin under the cockpit floor with rivets, but if it is desired to remove one skin but not the other, the rivets can be drilled out and replaced with 90013-3 or -5 screws and stainless nuts. If the baggage floor is to be removed, it is necessary to remove the long lower skin, in order to reach the nuts. </p>
-
-<p>During 12-month inspections, all screws attaching the fixed skins should be checked to see if they are tight. </p>
 
 <p>During 12-month inspections, all screws attaching the fixed skins should be checked to see if they are tight. </p>
 
