Added table for p/n

--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -1,4 +1,4 @@
-<p>Details of the windshield are shown below. </p>
+<p>Details of the windshield are shown below in <xref fileTarget="img_Fig_59.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_59.png">
@@ -7,11 +7,36 @@
 
 <p>For the plexiglass portion of the windshield be careful to always use a clean, soft cotton or microfiber rag (never a paper towel) and plastic windshield cleaner to prevent scratches. There are several commercially available products for cleaning plastic such as Plexus, All Kleer, and Clear View.  A mixture of equal parts water and hydrogen peroxide also makes a good plastic windshield cleaner.  DO NOT use any cleaner that contains ammonia or the plexiglass will be damaged.  It is also important to clean the windshield by gently rubbing the surface up and down, not in a circular motion.  Cleaning in a circular motion may cause a halo effect on your windshield. </p>
 
-<p>If a crack is found near one of the attaching screws, stop-drill with a no. 30 drill bit that is specifically designed for plexiglass.  The side windshields are p/n 11197-1 (L/H) and p/n 11197-2 (R/H) for the 802 and p/n 11197-3 (L/H) and p/n 11197-4 (R/H) for the 802A. </p>
+<p>If a crack is found near one of the attaching screws, stop-drill with a no. 30 drill bit that is specifically designed for plexiglass. See the table below for replacement windshield part numbers.</p>
+    <table class="plainTableSmall">
+        <tr>
+            <td class="plainTableHeaderCell centerText" colspan="3">Windshield Part Numbers</td>
+        </tr>
+        <tr>
+            <td class="plainTableHeaderCell centerText"> </td>
+            <td class="plainTableHeaderCell centerText">802</td>
+            <td class="plainTableHeaderCell centerText">802A</td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText">L/H</td>
+            <td class="plainTableNormalCell centerText">11197-1</td>
+            <td class="plainTableNormalCell centerText">11197-3</td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText">R/H</td>
+            <td class="plainTableNormalCell centerText">11197-2</td>
+            <td class="plainTableNormalCell centerText">11197-4</td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText">Center</td>
+            <td class="plainTableNormalCell centerText">10665-1</td>
+            <td class="plainTableNormalCell centerText">11248-1</td>
+        </tr>
+    </table>
 
-<p>The safety-glass center windshield can be cleaned with a soft rag and any good glass cleaner. The center windshield p/n is 10665-1 for the AT-802 and p/n 11248-1 for the AT-802A. </p>
+<p>The safety-glass center windshield can be cleaned with a soft rag and any good glass cleaner. </p>
 
-<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See Section <xref sectionTarget="2.75.2" labelPrepend="Section"></xref> for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16" to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
+<p>The windshield is sealed around the upper and lower edge under the metal flanges with commercial grade putty. Then the entire perimeter of the windshield is sealed with PR1422-A2 (See Section <xref sectionTarget="2.75.2" prependLabel="Section"></xref> for mixing instructions). Drill .166 holes through the windshield to match the aluminum attachments. Then remove the windshield and enlarge the holes in the windshield to 3/16" to prevent the attach screws from over-stressing and cracking the windshield at any location. </p>
 
 <p>To remove any of the windshields, the following procedure may be followed: </p>
 
@@ -37,4 +62,4 @@ The sealant may be removed from the edges of the panel and the windshield recess
 
 <p>For aircraft beginning with serial number -0332, Air Tractor began installing thicker center plate windshields in production aircraft. The new windshields are 3/8” thick as compared to the original 1/4" thick windshields. Both windshields are safety plate windshield glass.</p>
 
-<p>If you have aircraft flying in areas with large birds in the vicinity or would like to have extra windshield impact protection, these thicker windshields are available for installation in your aircraft. The windshields install using the same brackets and hardware as the originals. Directions for windshield retrofit can be located in Service Bulletin #276.</p>
+<p>If you have aircraft flying in areas with large birds in the vicinity or would like to have extra windshield impact protection, these thicker windshields are available for installation in your aircraft. The windshields install using the same brackets and hardware as the originals. Directions for windshield retrofit can be located in Service Letter #276.</p>
