--- a/html/Maintenance/Canopy Doors.html
+++ b/html/Maintenance/Canopy Doors.html
@@ -30,7 +30,7 @@
 
 <p>An alternate handle is installed at the factory in conjunction with radio equipment which could otherwise cause an interference problem with operation of the standard handle as it rotates forward toward the stop. This alternate handle has a separate latch arm and slimmer profile to accommodate radio installations installed in the forward corners of the cockpit.</p>
 
-<p>This alternate handle is available to facilitate radio installations made in the field as well. Be aware of the requirement to be able to use the cockpit door to be able to use the cockpit door emergency release handle and inspect any installations made to ensure the handle can operate through its full range of motion.</p>
+<p>This alternate handle is available to facilitate radio installations made in the field as well. Be aware of the requirement to be able to use the cockpit door emergency release handle and inspect any installations made to ensure the handle can operate through its full range of motion.</p>
 
 <p>Refer to Service Letter #323 for more information on the installation of the alternate handle.</p>
 
