--- a/html/Maintenance/Engine Mount Inspection.html
+++ b/html/Maintenance/Engine Mount Inspection.html
@@ -1,4 +1,4 @@
-<p>Engine mount cracks are difficult to see during a routine inspection because they are located adjacent to the engine mount ring located inside the plenum. The locations of these cracks are shown below.</p>
+<p>Engine mount cracks are difficult to see during a routine inspection because they are located adjacent to the engine mount ring located inside the plenum. The locations of these cracks are shown below in <xref fileTarget="img_Fig_2.80.8.1.png" xrefType="link">Fig Cross Reference</xref>.</p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_2.80.8.1.png">
