--- a/html/Maintenance/Engine Mount Inspection.html
+++ b/html/Maintenance/Engine Mount Inspection.html
@@ -18,3 +18,7 @@
                <li>After inspection, make a notation in aircraft logbooks to indicate that a visual inspection has been completed. </li>
 
 </ol>
+
+<p> For aircraft with less than 1,300 hours time-in-service (TIS), a visual inspection should be performed during every aircraft annual inspection. <xref fileTarget="img_Fig_2.80.8.1.png" xrefType="link">Fig Cross Reference</xref> shows the areas of the engine mount to inspect.</p>
+
+<p> For aircraft with more than 1,300 hours TIS, the visual inspection should be performed at the next 100 hours TIS inspection and then every 300 hours TIS after that.</p>
