added xref and section xref

--- a/html/Maintenance/Main Gear Spring.html
+++ b/html/Maintenance/Main Gear Spring.html
@@ -1,4 +1,4 @@
-<p>Details of the main-gear spring are shown below. The main gear spring is p/n 40091-3. It will fit on either side of the aircraft. It is machined of E-4340 aircraft quality steel, formed, heat-treated, and shot-peened for fatigue resistance. It is sandblasted and primed with an epoxy primer (US Paint R9006 Epoxy Primer) and finished with Alumigrip G-9046 yellow polyurethane paint. </p>
+<p>Details of the main-gear spring are shown below in <xref fileTarget="img_Fig_72.png" xrefType="link">Fig Cross Reference</xref>. The main gear spring is p/n 40091-3. It will fit on either side of the aircraft. It is machined of E-4340 aircraft quality steel, formed, heat-treated, and shot-peened for fatigue resistance. It is sandblasted and primed with an epoxy primer (US Paint R9006 Epoxy Primer) and finished with Alumigrip G-9046 yellow polyurethane paint. </p>
 
 <figure>
     <img class="imageCentered_3x4" src="img/img_Fig_72.png">
@@ -7,7 +7,7 @@
 
 <p>The inboard attachment of the spring to the fuselage frame is with a NAS158A106 bolt, MS20002C18 washer under the bolt head (be sure the chamfered side of the washer is next to the head), one or more MS20002-18 washers under the nut, AN310-18 nut, and MS24665-360 cotter. The bolt is installed upside down and torque should be 7,000 inch-pounds (torque wrench on bolt head). A simple adapter for your torque wrench is a short piece of 1 1/8" hex stock to enter the bolt head, and a 1 1/8" socket for your torque wrench. </p>
 
-<p>It is necessary to hoist the aircraft as described under LIFTING AND HOISTING when changing the inboard bolt. Be sure to grease the bolt with general purpose grease before installing. Also, be sure the bolt is marked R on the head to indicate the threads were rolled after heat-treat. </p>
+<p>It is necessary to hoist the aircraft as described under <xref sectionTarget="2.0.4" prependLabel="Section"></xref> when changing the inboard bolt. Be sure to grease the bolt with general purpose grease before installing. Also, be sure the bolt is marked R on the head to indicate the threads were rolled after heat-treat. </p>
 
 <p>The gear spring is clamped to the fuselage frame with a p/n40145-1 clamp block with one NAS156A129 bolt and one NAS154DH59 bolt. MS20002C14 washers go under the aft bolt head and MS20002C16 washers go under the forward bolt head (Make sure the chamfered side of the washer is under the bolt head). Various numbers of 3088A325 round shim washers go between the clamp block and fuselage frame at the aft bolt location. The fwd bolt uses p/n3088A326 shims. The shims are selected to allow the bolts to be fully torqued without bending the clamp block. The 3088A shims are .010 thick. If too many thick shims are used the gear connection will be too loose and will rattle during taxi or landing. If the gear leg becomes loose during service even though the clamp block bolts are at full torque it is necessary to re-shim the clamp block. </p>
 
@@ -24,7 +24,7 @@
 
 <p>Since each main gear leg is slightly different in thickness, and since each clamp block is machined within a specific tolerance, it is necessary to make a shim selection as described earlier, if either the gear leg or the clamp block is changed. </p>
 
-<p>As in the case of the tail gear spring, the main gear spring will fatigue and break at some point in the life of the aircraft. Again, the number of hours before failure will vary considerably as some operators make more landings per hour than others, or carry heavier loads, or operate form very rough strips. Pilot technique is again a factor, as some pilots are very rough on airplanes. See the Airworthiness Limitations section for the fatigue life of the main gear springs. </p>
+<p>As in the case of the tail gear spring, the main gear spring will fatigue and break at some point in the life of the aircraft. Again, the number of hours before failure will vary considerably as some operators make more landings per hour than others, or carry heavier loads, or operate form very rough strips. Pilot technique is again a factor, as some pilots are very rough on airplanes. See the <xref sectionTarget="6.2" prependLabel="Section"></xref> for the fatigue life of the main gear springs. </p>
 
 <p>The service life of the 1.56-inch thick main gear legs has been lowered to 2,500 landings or 1,000 hours, whichever comes first for operators with rough-strips, and 3,000 landings or 1,200 hours, whichever comes first, for operators working from smooth sod or paved landing sites.</p>
 
