--- a/html/Maintenance/Brake Removal and Replacement.html
+++ b/html/Maintenance/Brake Removal and Replacement.html
@@ -1,4 +1,4 @@
-<p>Brake details are shown below.</p>
+<p>Brake details are shown in <xref fileTarget="img_Fig_32.png" xrefType="link">Fig Cross Reference</xref>.</p>
 <p>Brake fluid used is red Mil-H-5606A petroleum-base fluid, which is used in most light aircraft. Do not use automotive brake fluid as this will swell the O-rings. </p>
 
 <figure>
