--- a/html/Maintenance/Brake Master-Cylinders.html
+++ b/html/Maintenance/Brake Master-Cylinders.html
@@ -1,4 +1,4 @@
-<p>The master cylinders are Cleveland p/n 10-86A. The lower end is bolted to aluminum straps connected to the rudder pedal. Both the strap and the pedal have bronze bushings that can be replaced when worn. The bushings are oil-impregnated and do not require lubrication. Details of the brake master cylinders are shown below. </p>
+<p>The master cylinders are Cleveland p/n 10-86A. The lower end is bolted to aluminum straps connected to the rudder pedal. Both the strap and the pedal have bronze bushings that can be replaced when worn. The bushings are oil-impregnated and do not require lubrication. Details of the brake master cylinders are shown below in <xref fileTarget="img_Fig_33.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_33.png">
