--- a/html/Maintenance/Parking Brake.html
+++ b/html/Maintenance/Parking Brake.html
@@ -1,4 +1,4 @@
-<p>The parking brake valve sued on later Air Tractor's is a Scott p/n 4500A-2.  Two of these valves are mounted together with a common lever to pull the valve to the ON position.  O-Rings within the valves may be replaced when needed.  An exploded view of the parking-brake valve is shown below. </p>
+<p>The parking brake valve sued on later Air Tractor's is a Scott p/n 4500A-2.  Two of these valves are mounted together with a common lever to pull the valve to the ON position.  O-Rings within the valves may be replaced when needed.  An exploded view of the parking-brake valve is shown below in <xref fileTarget="img_Fig_35.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_35.png">
@@ -7,7 +7,7 @@
 
 <p>The proper operation of the parking valve is as follows:</p>
 
-<ol type=‘1’>
+<ol type="1">
     <li>To set the parking brakes:</li>
     <ul>
         <li>Apply brakes.</li>
@@ -22,11 +22,12 @@
         <li>If not the valve can be gently pushed in to release the parking brakes.</li>
         <li>Release brake pedal pressure.</li>
 </ul>
+
 </ol>
 
-<div class=‘boxCautionLarge’>
-    <p class=‘boxCautionLargeHeader’>CAUTION</p>
-    <p class=‘boxCautionLargeText’>Applying brake pressure, before pushing the parking brake handle in, relieves the force required to unlock the parking valve. Forcing the parking brake valve in will damage the internal parts of the valve and cause the valve to malfunction.</p>
+<div class="boxCautionLarge">
+    <p class="boxCautionLargeHeader">CAUTION</p>
+    <p class="boxCautionLargeText">Applying brake pressure, before pushing the parking brake handle in, relieves the force required to unlock the parking valve. Forcing the parking brake valve in will damage the internal parts of the valve and cause the valve to malfunction.</p>
 </div>
 
 
@@ -62,4 +63,4 @@
 
 <p>Coat the replacement O-ring with MIL-H-5606 brake fluid and slide into position in the annular groove in the valve-stem housing. All parts to be reassembled should be coated with fluid before assembly. The remainder of the replacement can be done by working backwards from Step 11 of the removal procedure. The rivet that was destroyed in Step 7 above can be replaced with Scott part number 18286 or other suitable 3/32" x 5/8" R.H. steel rivet. </p>
 
-<p>After the parking-brake valve is returned to the airplane and hoses are reconnected, the brakes must be bled as described in Section <xref sectionTarget="2.90.13" labelPrepend="Section"></xref> of this manual. </p>
+<p>After the parking-brake valve is returned to the airplane and hoses are reconnected, the brakes must be bled as described in Section <xref sectionTarget="2.90.13" prependLabel="Section"></xref> of this manual. </p>
