added xref for figures

--- a/html/Maintenance/Wing Attachment to Fuselage.html
+++ b/html/Maintenance/Wing Attachment to Fuselage.html
@@ -1,4 +1,4 @@
-<p>Details of the wing's front-spar and rear-spar attachments to the fuselage are shown below. </p>
+<p>Details of the wing's front-spar and rear-spar attachments to the fuselage are shown below in <xref fileTarget="img_Fig_79.png" xrefType="link">Fig Cross Reference</xref> and <xref fileTarget="img_Fig_81.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_79.png">
@@ -16,7 +16,7 @@
 
 <p>The wing attach angles are p/n 20605-1 (aluminum) and p/n 20475-1 (steel). They are attached to the main spar with six AN6-15A and two AN6-16A bolts. If it is necessary to change the wing attach angles due to bolt wear or fuselage repairs, ask the factory for detailed instructions on how to drill the attach angles at the time they are ordered, as these angles are drilled to match each individual aircraft. </p>
 
-<p>The rear spar plate is attached to the fuselage frame with a single NAS1309-25 bolt. These bolts wear slightly and should be checked at 1,000 hour intervals, and replaced if worn or rusty. Do not use AN bolts at this location. To remove the bolts, first remove the lower wing gap cover, which is attached with screws. Removal detail of the gap cover is shown below. </p>
+<p>The rear spar plate is attached to the fuselage frame with a single NAS1309-25 bolt. These bolts wear slightly and should be checked at 1,000 hour intervals, and replaced if worn or rusty. Do not use AN bolts at this location. To remove the bolts, first remove the lower wing gap cover, which is attached with screws. Removal detail of the gap cover is shown below in <xref fileTarget="img_Fig_82.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_82.png">
