added table for torque values and xref for section

--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -1,4 +1,4 @@
-<p>Details of the wing center-splice connection are shown below. </p>
+<p>Details of the wing center-splice connection are shown below in <xref fileTarget="img_Fig_83.png" xrefType="link">Fig Cross Reference</xref>. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_83.png">
@@ -13,19 +13,43 @@
 
 <p>Torque values should be checked on the nuts to learn if the bolts have elongated or if fretting has loosened the fit of the joint. Torque values to be checked are as follows: </p>
 
-<p>300 inch-pounds on the 3/8" nut </p>
-
-<p>550 inch-pounds on the 7/16" nut </p>
-
-<p>800 inch-pounds on the 1/2" nut </p>
-
-<p>1,100 inch-pounds on the 9/16" nut </p>
-
-<p>1,700 inch-pounds on the 5/8" nut </p>
-
-<p>2,800 inch-pounds on the 3/4" nut </p>
-
-<p>1,920 inch-pounds on the 3/4" tube-nut assembly </p>
+<table class="plainTableSmall">
+        <tr>
+        <td class="plainTableHeaderCell centerText" colspan="2">Torque Values for Wing Connection</td>
+        </tr>
+        <tr>
+            <td class="plainTableHeaderCell centerText">Nut Size</td>
+            <td class="plainTableHeaderCell centerText">Torque (inch-pounds)</td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 3/8"</td>
+            <td class="plainTableNormalCell centerText"> 300 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 7/16" </td>
+            <td class="plainTableNormalCell centerText"> 550 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 1/2" </td>
+            <td class="plainTableNormalCell centerText"> 800 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 9/16" </td>
+            <td class="plainTableNormalCell centerText"> 1,100 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 5/8" </td>
+            <td class="plainTableNormalCell centerText"> 1,700 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 3/4" </td>
+            <td class="plainTableNormalCell centerText"> 2,800 </td>
+        </tr>
+        <tr>
+            <td class="plainTableNormalCell centerText"> 3/4" tube-nut assembly</td>
+            <td class="plainTableNormalCell centerText"> 1,920 </td>
+        </tr>
+    </table>
 
 <p>There are seven 90050-6-25 bolts through the small leg of each spar cap that attach to the 20994-2 plate on the aft side of the web. On the lower spar caps, there are an additional three 90050-6-22 bolts through the small leg of each cap and seven 90050-6-22 bolts through the spar web plates. These 3/8" nuts are checked for torque (300 inch-pounds). The two NAS1304-26, eight NAS1304-22, and ten NAS1304-25 bolts through the 20994-2 plate and spar have a torque of 100 inch-pounds applied to the nut. The six NAS1305-22 and eight NAS1305-26 bolts have a torque of 200 in -lbs applied at the nut. The two NAS1205-26 screws have a torque of 150 in-lbs applied at the nuts. </p>
 
@@ -33,7 +57,7 @@
 
 <p>Always use a new nut for replacement after a nut is removed. </p>
 
-<p>For appropriate inspection intervals of the wing center splice connection, see Section <xref sectionTarget="3.1.13" labelPrepend="Section"></xref> of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
+<p>For appropriate inspection intervals of the wing center splice connection, see <xref sectionTarget="3.1.13" prependLabel="Section"></xref> of this manual. If a new wing is to be installed, contact the factory for wing installation instructions at the time the wing is ordered. </p>
 
 <div class='boxCautionLarge'>
     <p class='boxCautionLargeHeader'>CAUTION</p>
