--- a/html/Maintenance/MVP50T Engine Instrument Calibration.html
+++ b/html/Maintenance/MVP50T Engine Instrument Calibration.html
@@ -28,12 +28,12 @@ ITT should be checked with a type K thermocouple tester.  In the industry, these
 <p><b>Fuel Filter Indicator</b></p>
 
 <p><b>Outside Air Temperature</b></p>
-The outside air temperature probe is located underneath the right hand wing.  To check this function, it is recommended that the probe is dipped into an ice bath
+The outside air temperature probe is located underneath the right hand wing.  To check this function, it is recommended that the probe is dipped into an ice bath and a hot water bath.  Compare the OAT indication 
 
 <p><b>Amps</b></p>
 <p>Generator electrical current is measured using a shunt resistor which is mounted with the main relays.</p>
 <p>There is no need to calibrate this function unless there is a suspicion that it is providing erroneous information</p>
-<p>The shunt resistor is designed to produce a 50mV voltage drop when 300 amps of current flow through it.  To check that the shunt, measure the resitance between the screw terminals.  The resistance should be .16mΩ.</p>
+<p>The shunt resistor is designed to produce a 50mV voltage drop when 300 amps of current flow through it.  To check that the shunt, measure the resistance between the screw terminals.  The resistance should be .16mΩ.</p>
 
 <p><b>G-Meter</b></p>
 <p>Aircraft that have the MVP-50T Primary Engine Monitor STC installed by Air Tractor (SA02135SE) may have a G-force sensor, labeled GS-3, not reading accurately. As of September 2016, a G-force calibration inspection requirement was been added to Air Tractor production. 
